fixed stretched layout

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ header h3 {
 }
 
 code {
-  font-size: 0.875rem;
+  font-size: 0.8125rem;
   font-family: "Fira Code", monospace;
 }
 .snapcode {
